puliendo algunos detalles home

--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -169,7 +169,7 @@ body {
   }
 
   footer {
-    background-color: #00448C;
+    background-color: #00A54F;
     color: #FFFFFF;
     padding: 30px 0;
   }
