--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -245,26 +245,34 @@ body {
 
 .social-bar {
   position: fixed;
+  left: -37px; /* Oculto con solo un pequeño relieve */
   top: 50%;
-  left: 10px;
   transform: translateY(-50%);
   display: flex;
   flex-direction: column;
   gap: 10px;
-  z-index: 1000;
+  transition: left 0.3s ease-in-out;
+  z-index: 1000; /* Asegura que esté encima del carrusel */
+}
+
+.social-bar:hover {
+  left: 10px; /* Aparece al pasar el mouse */
 }
 
 .social-icon {
-  width: 50px;
-  height: 50px;
+  opacity: 0.6;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 1.8rem;
-  color: white;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
-  text-decoration: none;
+  color: white;
+  font-size: 24px;
+  transition: all 0.3s ease;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
 }
+
 
 .facebook { background: #1877F2; }
 .instagram { background: #C13584; }
@@ -272,6 +280,11 @@ body {
 .whatsapp { background: #25D366; }
 
 .social-icon:hover {
-  opacity: 0.8;
+  opacity: 1.0;
+}
+
+/* para que no tape la seccion*/
+section {
+  scroll-margin-top: 120px; /* Ajusta según el tamaño del navbar */
 }
 
